# emojify-cli

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
.github/workflows/: publish-package.yml  publish-testpypi.yml  pytest.yml
emojify_cli/: __init__.py  __main__.py  cli.py  config.py  defaults.py  emoji.py  main.py  util.py
tests/: test_cli.py  test_config.py  test_emoji.py
