[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "emojify-cli"
version = "0.2.0"
description = "Convert text into Discord emoji codes"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name = "André Oliveira Mendes" }
]

[project.scripts]
emojify = "emojify_cli.main:main"

