[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

[project]
name = "emojify-cli"
dynamic = ["version"]
description = "Convert text into Discord emoji codes"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name = "André Oliveira Mendes" }
]

[project.scripts]
emojify = "emojify_cli.main:main"

